front: correction pb de scrollbar lors de certaines résolution

--- a/src/views/pages/qcm/remplir/fin.css
+++ b/src/views/pages/qcm/remplir/fin.css
@@ -15,7 +15,7 @@
 
     border-radius: 4px;
 
-    padding: 16px;
+    padding: 16px;overflow: hidden;
 }
 
 /*titre du QCM*/
